<resources>
    <string name="app_name">PENS Etudiants</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="button_simpan">Simpan</string>
    <string name="hint_nama_mahasiswa">Nama mahasiswa...</string>
    <string name="hint_nama_prodi">Nama program studi...</string>
    <string name="label_NRP">NRP*</string>
    <string name="label_prodi">Program Studi*</string>
    <string name="label_no_hp">No. Handphone</string>
    <string name="label_departemen">Departemen*</string>
    <string name="label_no_telp">No. Telepon</string>

    <string-array name="list_departement">
        <item>Teknik Elektronika</item>
        <item>Teknik Informatika dan Komputer</item>
        <item>Teknik Mekanika Energi</item>
        <item>Teknik Multimedia Kreatif</item>
    </string-array>

</resources>
